# wagtail-videos

./: .gitignore  .gitlab-ci.yml  CHANGELOG.rst  MANIFEST.in  README.rst  setup.cfg  setup.py
.github/workflows/: test.yml
tests/: test_admin_views.py  test_signals.py
tests/app/: settings.py
tests/app/migrations/: 0005_customvideomodel_error_message.py
wagtailvideos/: chunked_uploads.py  ffmpeg.py  models.py  signals.py  tasks.py
wagtailvideos/migrations/: 0016_video_error_message.py
wagtailvideos/static/wagtailvideos/js/: add-multiple.js
wagtailvideos/templates/wagtailvideos/multiple/: add.html
wagtailvideos/templates/wagtailvideos/videos/: edit.html
wagtailvideos/views/: chooser.py  multiple.py  videos.py
