[metadata]
description_file = README.rst

[bdist_wheel]
universal = 1

[isort]
skip_glob = */migrations/*
line_length = 79
multi_line_output = 4

[pep8]
max-line-length = 120
ignore = W503

[flake8]
max-line-length = 120
# W503/W504 are mutually exclusive and both in flake8's default ignore list;
# listing them explicitly keeps them ignored (a bare `ignore` overrides the
# defaults, which would otherwise make multi-line binary expressions unfixable).
ignore = E501, W503, W504
exclude = migrations
